--- a/public/css/main.css
+++ b/public/css/main.css
@@ -129,7 +129,7 @@ width: 90%;
 .content-card p {
 font: normal 500 0.8em "sigmund-pro", sans-serif;
 color: #400862;
-margin-bottom: 10px;;
+margin-bottom: 15px;
 }
 
 .content-card form label {
@@ -196,6 +196,19 @@ display: block;
 height: 45px;
 }
 
+.content-card input[type='button']
+{
+width: 100%;
+height: 50px;
+margin: 10px auto;
+border: none;
+border-radius: 8px;
+background: #400862;
+font: normal 500 0.8em "sigmund-pro", sans-serif;
+color: #fafafa;
+cursor: pointer;
+}
+
 .content-card input[type='submit']
 {
 width: 100%;
@@ -208,8 +221,6 @@ font: normal 500 0.8em "sigmund-pro", sans-serif;
 color: #fafafa;
 cursor: pointer;
 }
-
-
 
 
 
