--- a/public/css/main.css
+++ b/public/css/main.css
@@ -107,6 +107,37 @@ background: #fafafa;
 padding: 15px 15px 35px 15px;
 }
 
+.content-card.small {
+text-align: center;
+height: 150px;
+width: 40%;
+margin-top: 75px;
+}
+
+.content-card.small h3 {
+font-size: 1.5em;
+margin-top: 25px;
+}
+
+.content-card.small p {
+font-size: 0.9em;
+}
+
+.content-card.small span a {
+display: inline-block;
+width: 170px;
+height: 50px;
+font: normal 500 1.2em "sigmund-pro", sans-serif;
+color: #400862;
+border: 1px solid #400862;
+border-radius: 10px;
+text-decoration: none;
+line-height: 2.4em;
+margin: 5px auto 0 auto;
+}
+
+
+
 .content-card form {
 width: 90%;
 margin: 0 auto;
