--- a/public/css/main.css
+++ b/public/css/main.css
@@ -325,7 +325,7 @@ height: 32px;
 font: normal 500 0.8em "sigmund-pro", sans-serif;
 text-align: center;
 line-height: 2.5em;
-margin-right: 25px;
+margin-right: 15px;
 margin-top: 0;
 cursor: pointer;
 }
@@ -401,6 +401,126 @@ color: #400862;
 text-decoration: none;
 }
 
+/* messages */
+
+.content.messages {
+background: #fff;
+border-radius: 35px;
+height: auto;
+padding-bottom: 75px;
+}
+
+.message-container {
+display: flex;
+flex-direction: row;
+border-bottom: 1px solid #ccc;
+padding: 20px 0;
+width: 90%;
+margin: 0 auto;
+}
+
+.message-container:first-of-type {
+margin-top: 35px;
+}
+
+.message-container:last-of-type {
+border: none;
+}
+
+.content.messages header {
+width: 90%;
+margin: 0 auto;
+position: relative;
+top: 25px;
+}
+
+.content.messages header h3 {
+width: 95%;
+font: normal 700 1.4em "sigmund-pro", sans-serif;
+color: #8220BF;
+margin: 5px 0 0 15px;
+}
+
+.content.messages select {
+margin: auto 25px auto 0;
+}
+
+.content.messages header menu {
+display: block;
+width: 35%;
+margin: auto 0;
+text-align: right;
+}
+
+.content.messages header menu li {
+display: inline-block;
+list-style-type: none;
+margin-right: 10px;
+width: 36px;
+height: 35px;
+border: 1px solid #400862;
+border-radius: 5px;
+line-height: 2.3em;
+cursor: pointer;
+text-align: center;
+}
+
+.content.messages .left-column img {
+width: 96px;
+height: 96px;
+margin-right: 15px;
+}
+
+.content.messages .right-column {
+width: 75%;
+}
+
+.content.messages .right-column h4 {
+width: 95%;
+font: normal 700 1em "sigmund-pro", sans-serif;
+color: #8220BF;
+}
+
+.content.messages .right-column p {
+width: 100%;
+font: normal 400 0.8em "sigmund-pro", sans-serif;
+color: #400862;
+text-align: justify;
+margin-bottom: 15px;
+}
+
+.content.messages .right-column p:first-of-type {
+font: normal 600 1em "sigmund-pro", sans-serif;
+margin-bottom: 3px;
+}
+
+.content.messages .right-column menu li {
+display: inline-block;
+width: 150px;
+height: 35px;
+list-style-type: none;
+margin-right: 15px;
+text-align: center;
+line-height: 2.3em;
+border: 1px solid #400862;
+border-radius: 10px;
+margin-right: 10px;
+}
+
+.content.messages .right-column menu li a {
+font: normal 500 0.9em "sigmund-pro", sans-serif;
+color: #400862;
+text-decoration: none;
+}
+
+
+.content.messages .message-date {
+width: 25%;
+font: normal 500 0.8em "sigmund-pro", sans-serif;
+color: #400862;
+text-align: right;
+
+}
 
 
 footer p {
