--- a/public/css/main.css
+++ b/public/css/main.css
@@ -524,14 +524,85 @@ text-align: right;
 
 /* slide panel */
 
-.overlay {
+#overlay {
+position: fixed;
+top: 0;
+left: 0;
 display: none;
 width: 100%;
 height: 100vh;
-background: rgba(64,8,98,0.3);
+background: rgba(64,8,98,0.8);
+
 }
 
+.side-panel {
+position: absolute;
+top: 0;
+right: 0;
+width: 45%;
+height: 100vh;
+background: #fff;
+z-index: 99999 !important;
+}
 
+.side-panel h3 {
+width: 95%;
+font: normal 700 1.4em "sigmund-pro", sans-serif;
+color: #8220BF;
+margin: 10px 0 0 25px;
+}
+
+#close {
+float: right;
+margin: 10px 10px 0 0;
+font: normal 300 2.5em "sigmund-pro", sans-serif;
+color: #8220BF;
+cursor: pointer;
+}
+
+#message-box {
+border: 1px solid #ccc;
+border-radius: 10px;
+width: 85%;
+height: 350px;
+margin: 140px auto 0 auto;
+}
+
+#message-box textarea {
+width: 90%;
+height: 170px;
+margin: 25px auto 0 25px;
+border: none;
+outline: transparent;
+resize: none;
+}
+
+#message-box ul {
+margin: 15px 0 0 25px;
+}
+
+#message-box ul li {
+display: inline-block;
+list-style-type: none;
+}
+
+#message-box form input[type='submit'] {
+display: block;
+width: 150px;
+height: 35px;
+margin-left: auto;
+text-align: center;
+background: transparent;
+border: 1px solid #400862;
+background: #400862;
+font: normal 500 0.9em "sigmund-pro", sans-serif;
+color: #fafafa;
+border-radius: 10px;
+margin-top: 25px;
+margin-left: auto;
+margin-right: 25px;
+cursor: pointer;
+}
 
 
 footer p {
