--- a/public/css/main.css
+++ b/public/css/main.css
@@ -524,25 +524,37 @@ text-align: right;
 
 /* slide panel */
 
-#overlay {
+.overlay {
 position: fixed;
 top: 0;
 left: 0;
-display: none;
+opacity: 0;
+visibility: hidden;
+transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
 width: 100%;
 height: 100vh;
 background: rgba(64,8,98,0.8);
+}
 
+.overlay.make-visible {
+opacity: 1;
+visibility: visible;
 }
 
 .side-panel {
 position: absolute;
 top: 0;
-right: 0;
-width: 45%;
+right: -600px;
+width: 600px;
 height: 100vh;
 background: #fff;
-z-index: 99999 !important;
+transition: right .5s;
+z-index: 1;
+}
+
+.side-panel.open-window {
+right: 0;
+
 }
 
 .side-panel h3 {
